--- a/DinerMax3000BusinessLayer/app.config
+++ b/DinerMax3000BusinessLayer/app.config
@@ -7,4 +7,25 @@
             connectionString="Data Source=.\mainsqlexpress;Initial Catalog=DinerMax3000;Persist Security Info=True;User ID=tester;Password=supermann"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="WeatherSoap" />
+            </basicHttpBinding>
+            <customBinding>
+                <binding name="WeatherSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+            </customBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://wsf.cdyne.com/weatherws/weather.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WeatherSoap"
+                contract="CDyne.WeatherSoap" name="WeatherSoap" />
+            <endpoint address="http://wsf.cdyne.com/weatherws/weather.asmx"
+                binding="customBinding" bindingConfiguration="WeatherSoap12"
+                contract="CDyne.WeatherSoap" name="WeatherSoap12" />
+        </client>
+    </system.serviceModel>
 </configuration>
